# mathby

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check.yaml
mathby/scripts/: simple.py
scripts/: __init__.py  arithmetics.py  collection.py  figures.py  simple.py
test/: test_collection.py  test_simple.py
tests/: test_arithmetics.py  test_figures.py
