[tool.poetry]
name = "mathby"
version = "0.1.0"
description = ""
authors = ["Kosfesch <kostya2010123@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
